test/fixtures/type-error/typeError.lys.txt
test/fixtures/type-error/typeError.lys
    1│ 
    2│ fun x(): i32 = false
     │                ^^^^^ Type mismatch: Type "boolean" is not assignable to "i32"